Fix logging, remove config cache, and add migration steps

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,6 +43,51 @@ jobs:
           docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/gcr:${{ github.sha }} .
           docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/gcr:${{ github.sha }}
 
+      - name: Clear Laravel Cache
+        run: |
+          docker run --rm \
+            -e DB_CONNECTION=mysql \
+            -e DB_HOST=${{ secrets.CLOUD_SQL_HOST }} \
+            -e DB_PORT=3306 \
+            -e DB_DATABASE=fp_pso \
+            -e DB_USERNAME=root \
+            -e DB_PASSWORD='' \
+            -e APP_KEY=${{ secrets.APP_KEY }} \
+            gcr.io/${{ secrets.GCP_PROJECT_ID }}/gcr:${{ github.sha }} \
+            php artisan config:clear
+
+      - name: Test Database Connection
+        run: |
+          docker run --rm \
+            -e DB_CONNECTION=mysql \
+            -e DB_HOST=${{ secrets.CLOUD_SQL_HOST }} \
+            -e DB_PORT=3306 \
+            -e DB_DATABASE=fp_pso \
+            -e DB_USERNAME=root \
+            -e DB_PASSWORD='' \
+            -e APP_KEY=${{ secrets.APP_KEY }} \
+            gcr.io/${{ secrets.GCP_PROJECT_ID }}/gcr:${{ github.sha }} \
+            php artisan db:monitor
+
+      - name: Run Database Migrations
+        run: |
+          docker run --rm \
+            -e DB_CONNECTION=mysql \
+            -e DB_HOST=${{ secrets.CLOUD_SQL_HOST }} \
+            -e DB_PORT=3306 \
+            -e DB_DATABASE=fp_pso \
+            -e DB_USERNAME=root \
+            -e DB_PASSWORD='' \
+            -e APP_KEY=${{ secrets.APP_KEY }} \
+            gcr.io/${{ secrets.GCP_PROJECT_ID }}/gcr:${{ github.sha }} \
+            php artisan migrate --force
+
+      - name: Verify File Permissions
+        run: |
+          docker run --rm \
+            gcr.io/${{ secrets.GCP_PROJECT_ID }}/gcr:${{ github.sha }} \
+            ls -ld /var/www/html/storage /var/www/html/bootstrap/cache
+
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy hrms-service \
@@ -50,9 +95,9 @@ jobs:
             --platform managed \
             --region us-central1 \
             --service-account hrms-deployment@feisty-reality-461020-d5.iam.gserviceaccount.com \
-            --set-env-vars "DB_CONNECTION=mysql,DB_HOST=${{ secrets.CLOUD_SQL_HOST }},DB_PORT=3306,DB_DATABASE=fp_pso,DB_USERNAME=root,DB_PASSWORD=" \
+            --set-env-vars "APP_ENV=production,APP_DEBUG=true,APP_KEY=${{ secrets.APP_KEY }},DB_CONNECTION=mysql,DB_HOST=${{ secrets.CLOUD_SQL_HOST }},DB_PORT=3306,DB_DATABASE=fp_pso,DB_USERNAME=root,DB_PASSWORD=,APP_LOG_CHANNEL=stack" \
             --timeout 600 \
+            --memory 512Mi \
+            --cpu 1 \
             --allow-unauthenticated \
             --quiet
-
-
