--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,6 +56,19 @@ jobs:
             gcr.io/${{ secrets.GCP_PROJECT_ID }}/gcr:${{ github.sha }} \
             php artisan config:clear
 
+      - name: Check Migration Status
+        run: |
+          docker run --rm \
+            -e DB_CONNECTION=mysql \
+            -e DB_HOST=${{ secrets.CLOUD_SQL_HOST }} \
+            -e DB_PORT=3306 \
+            -e DB_DATABASE=fp_pso \
+            -e DB_USERNAME=root \
+            -e DB_PASSWORD='' \
+            -e APP_KEY=${{ secrets.APP_KEY }} \
+            gcr.io/${{ secrets.GCP_PROJECT_ID }}/gcr:${{ github.sha }} \
+            php artisan migrate:status
+
       - name: Test Database Connection
         run: |
           docker run --rm \
@@ -97,7 +110,10 @@ jobs:
             --service-account hrms-deployment@feisty-reality-461020-d5.iam.gserviceaccount.com \
             --set-env-vars "APP_ENV=production,APP_DEBUG=true,APP_KEY=${{ secrets.APP_KEY }},DB_CONNECTION=mysql,DB_HOST=${{ secrets.CLOUD_SQL_HOST }},DB_PORT=3306,DB_DATABASE=fp_pso,DB_USERNAME=root,DB_PASSWORD=,APP_LOG_CHANNEL=stack" \
             --timeout 600 \
-            --memory 512Mi \
-            --cpu 1 \
+            --memory 1Gi \
+            --cpu 2 \
             --allow-unauthenticated \
             --quiet
+
+      - name: Check Deployment Logs
+        run: gcloud run logs tail hrms-service --region us-central1 --limit 100
